--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,89 @@
-buildscript {
+plugins {
+    id 'java'
+    id 'com.gtnewhorizons.retrofuturagradle' version '1.3.35'
+}
+
+version = "1.3.8"
+group = "surreal.contentcreator"
+
+base {
+	archivesName = "ContentCreator"
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+    sourceCompatibility = 8
+    targetCompatibility = 8
+}
+
+configurations {
+    embed
+    implementation.extendsFrom(embed)
+}
+
+minecraft {
+    mcVersion = '1.12.2' // stable-39
+
+    mcpMappingChannel.set("snapshot")
+    mcpMappingVersion.set("20171003")
+
+    // Set username here, the UUID will be looked up automatically
+    username = 'Developer'
+    
+    // Add various JVM arguments here for runtime
+    def args = ["-ea:${project.group}"]
+	args << '-Dfml.coreMods.load=surreal.contentcreator.core.CCLoadingPlugin'
+	args << "-Xms128m"
+    args << "-Xmx2048m"
+    extraRunJvmArguments.addAll(args)
+
+    // Include and use dependencies' Access Transformer files
+    useDependencyAccessTransformers = true
+}
+
+repositories {
+    maven {
+        name "Jared Maven"
+        url "https://maven.blamejared.com/" // for Crafttweaker and BWM
+    }
+    maven {
+        name "Applecore"
+        url "https://www.ryanliptak.com/maven/" // for Applecore
+    }
+}
+
+dependencies {
+    // Crafttweaker
+    implementation "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.673"
+
+    // Applecore
+    compileOnly "applecore:AppleCore:1.12.2-3.1.5"
+}
+
+processResources {
+    inputs.property 'version', project.version
+    inputs.property 'mcversion', project.minecraft.version
+    
+    filesMatching(['mcmod.info', 'pack.mcmeta']) { fcd ->
+        fcd.expand (
+                'version': project.version,
+                'mcversion': project.minecraft.version
+        )
+    } 
+}
+
+
+jar {
+    manifest {
+        attributes([
+                "FMLCorePluginContainsFMLMod": true,
+                "FMLCorePlugin": 'surreal.contentcreator.core.CCLoadingPlugin',
+                "ForceLoadAsMod": true
+        ])
+    }
+}
+
+/*buildscript {
     repositories {
         maven { url = "https://files.minecraftforge.net/maven" }
     }
@@ -21,7 +106,7 @@ compileJava {
 minecraft {
     version = "1.12.2-14.23.5.2847"
     runDir = "run"
-    mappings = "snapshot_20171003"
+    mappings = ""
 }
 
 repositories {
@@ -66,4 +151,4 @@ jar {
                 "ForceLoadAsMod": true
         ])
     }
-}
+}*/
